# aosp_device_google_trout

./: AndroidProducts.mk  CPPLINT.cfg  OWNERS  SCR.txt  aosp_trout_arm64.mk  aosp_trout_common.mk  aosp_trout_x86.mk  aosp_trout_x86_64.mk  flashall.sh  generate_diskimage.py  manifest.xml  manifest_x86.xml  partition-table.img  partition.bpt
agl_services_build/: CMakeLists.txt  build.sh  newrepo.sh  repo_manifest.xml
agl_services_build/cmake/utils/: grpc_cpp_generator.cmake
agl_services_build/toolchain/: agl_toolchain.cmake
agl_services_build/yocto-layer/meta-google/: README.md
agl_services_build/yocto-layer/meta-google/recipes-trout/agl-services/: common.inc  google-trout-agl-services_0.1.bb  sources.inc
config/: input-port-associations.xml
hal/audio/6.0/: Android.bp  audio_hw.c
hal/audiocontrol/2.0/: Android.bp  AudioControl.cpp  AudioControl.h  AudioControlServer.cpp  WatchdogClient.cpp  WatchdogClient.h  manifest_android.hardware.audiocontrol@2.0-service.trout.xml  service.cpp
hal/audiocontrol/2.0/agl_build/: CMakeLists.txt
hal/audiocontrol/2.0/libandroid_audio_controller/: android_audio_controller.cpp  android_audio_controller.h
hal/audiocontrol/2.0/proto/: AudioFocusControl.proto
hal/audiocontrol/aidl/1.0/: Android.bp  AudioControl.cpp  audiocontrol-trout.rc
hal/common/android/vsock/: Android.bp  vsockinfo.cpp  vsockinfo.h
hal/common/android/watchdog/: Android.bp
hal/dumpstate/1.1/: Android.bp  CMakeLists.txt  DumpstateDevice.cpp  DumpstateDevice.h  DumpstateGrpcServer.cpp  DumpstateGrpcServer.h  DumpstateServer.cpp  ServiceDescriptor.h  ServiceSupplier.cpp  ServiceSupplier.h  manifest_android.hardware.dumpstate@1.1-service.trout.xml  server_main.cpp  service.cpp
hal/dumpstate/1.1/agl_build/: CMakeLists.txt
hal/dumpstate/1.1/config/: Android.bp
hal/dumpstate/1.1/scripts/: dumpstate_grpc_server.service
hal/dumpstate/1.1/tests/: tests.cpp
hal/dumpstate/aidl/1.0/: Android.bp  dumpstate-trout.rc  dumpstate-trout.xml
hal/gnss/aidl/: Android.bp  gnss-trout.rc
hal/gnss/common/utils/: Android.bp
hal/sensors/2.0/: Android.bp  OWNERS  Sensor.cpp  Sensor.h  SensorsSubHal.cpp  iio_utils.cpp  iio_utils.h
hal/sensors/2.0/tests/: IioUtilsTest.cpp
hal/sensors/2.1/: OWNERS  README
hal/sensors/2.1/config/: sensor_hal_configuration.xsd
hal/sensors_2.0_subhal/: Android.bp  Sensor.cpp  Sensor.h  SensorsSubHal.cpp  SensorsSubHal.h  iio_utils.cpp
hal/vehicle/2.0/: Android.bp  GarageModeHandler.cpp  GarageModeHandler.h  GarageModeServerSideHandler.cpp  GrpcVehicleClient.cpp  GrpcVehicleServer.cpp  GrpcVehicleServer.h  Utils.cpp  Utils.h  VirtualizationGrpcServer.cpp  VirtualizedVehicleService.cpp  manifest_android.hardware.automotive.vehicle@2.0-virtualization-service.xml
hal/vehicle/2.0/agl_build/: CMakeLists.txt
hal/vehicle/2.0/agl_build/cmake/: android.cmake  fmtlib.cmake  grpc.cmake  jsoncpp.cmake
hal/vehicle/2.0/agl_build/prebuilt/include/android/hardware/automotive/vehicle/2.0/: types.h
hal/vehicle/2.0/agl_build/scripts/: vehicle_hal_grpc_server.service
hal/vehicle/2.0/proto/: VehicleServer.proto
hal/vehicle/aidl/: Android.bp  GRPCVehicleHardware.cpp  GRPCVehicleHardware.h  VirtualizedVehicleService.cpp  android.hardware.automotive.vehicle@V1-trout-service.rc  manifest_android.hardware.automotive.vehicle@V1-trout-service.xml
hal/vehicle/aidl/proto/: VehicleServer.proto
patches/kernel/: 0001-MA-22692-Add-necessary-config-for-xen-booting-Androi.patch  0001-don-t-generate-the-AVB-images.patch
patches/uboot/: 0001-xen-xenguest_arm64-map-all-VIRTIO-MMIO-region.patch  0002-MA-22692-necessary-config-change-for-enable-trout-on.patch
product_files/: fstab.trout
product_files/bluetooth/: bdroid_buildcfg.h
product_files/odm/: ueventd.rc
product_files/overlay/frameworks/base/core/res/res/values/: config.xml
rro_overlays/EvsOverlay/: Android.bp  AndroidManifest.xml  OWNERS
rro_overlays/EvsOverlay/res/values/: config.xml
shared/: BoardConfig.mk
tests/hal/dumpstate/1.1/: Android.bp
tests/hal/vehicle/2.0/: Android.bp
toolchain/: agl_toolchain.cmake
tools/: bpttool
tools/tracing/: Android.bp  TracingClient.cpp  TracingClientTestMain.cpp  TracingServerImpl.cpp
tools/tracing/client/: TracingClient.cpp
tools/tracing/proto/: Android.bp  TracingVM.proto  perfetto_trace.proto
tools/tracing/ptp/: ptp_qnx_android.py
tools/tracing/server/: TracingServerImpl.cpp
tools/tracing/time_utility/: Android.bp  ClockTime.cpp
tools/tracing/tooling/: calculate_time_offset.py  prepare_tracing.py  tracing_agent.py  update_trace.py
trout_arm64/: AndroidBoard.mk  BoardConfig.mk
trout_arm64/wifi/: virtwifi.sh
trout_x86/: BoardConfig.mk  manifest.xml
trout_x86_64/: BoardConfig.mk
vport_trigger/: Android.bp
